--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="oloco.css">
+    <link rel="stylesheet" href="stylesheet.css">
     
     <body>
         <div class="container">
