--- a/index.html
+++ b/index.html
@@ -13,22 +13,7 @@
     <link rel="shortcut icon" href="imgs/LogoPrincipal1.png">
     <style>
         /* Make the image fully responsive */
-        .carousel-inner img {
-            width: 100%;
-            height: 100%;
-            max-width: 600px;
-            max-height: 350px;
-            margin-right: auto;
-            margin-left: auto;
-            display: block;
-            border-radius: 20px 20px 0 0;
-            margin-top:50px ;
 
-        }
-
-        .carousel-inner img{
-            margin-top: 10px;
-        }
     </style>
 </head>
 
@@ -90,6 +75,9 @@
         </div>
     </div>
     <div class="boxPrincipal">
+        <div class="fixed">
+            <a href=""><img style="width: 55px" src="imgs/negocim.png" alt="negocim"></a>
+        </div>
         <div class="">
             <div class="boxvideo">
                 <video class="video">
@@ -97,19 +85,17 @@
                 </video>
             </div>
         </div>
-    <div class="containerMissao">
+    <div class="containerVerde">
         <p style="font-size: 24px;"><strong>Nossa Missão</strong></p>
-        <p 1 style="font-size: 20px; text-align: justify;">&nbsp TV Estudante é um projeto de extensão do IFMT - Campus Cuiabá que tem o intuito de transformar as formas de ensino tradicional a partir do uso de mídias digitais interativas.</p>       
+        <p style="font-size: 20px; text-align: justify;">&nbsp TV Estudante é um projeto de extensão do IFMT - Campus Cuiabá que tem o intuito de transformar as formas de ensino tradicional a partir do uso de mídias digitais interativas.</p>       
 <p 1 style="font-size: 20px; text-align: justify;">&nbsp A partir de treinamentos em edição de vídeos, mudamos as dinâmicas em sala de aula com materiais educativos que cativam, educam e inspiram nossos jovens a buscarem sempre a inovação, que é a mais forte ferramenta na construção do conhecimento.
 </p>
     </div>
-    <div class="fixed">
-        <a href=""><img style="width: 55px" src="imgs/negocim.png" alt="negocim"></a>
-       </div>
+    
 
     <div class="container">
         <div>
-           <div class="textnoticias"> NOTÍCIAS</div>
+           <div class="textnoticias"><strong>NOTÍCIAS</strong></div>
         </div>
         <div id="bannerDeNoticias" class="carousel slide" data-ride="carousel">
             <!--INDICADORES DO BANNER -->
@@ -162,8 +148,8 @@
 
     <!--Programas -->
     <div class="containerConteudos">
-        <div class="boxBordaArredonda">
-            <h5 class="textoChamadaBranco">Conheça nossos Conteúdos</h5>
+        <div class="containerVerde">
+            <p style="font-size: 24px;"><strong>Conheça nossos Conteúdos</strong></p>
             <div class="row">
                 <div class="col">
                     <img src="imgs/holaquetal.png" alt="Hola que Tal" class="figuraPrograma">
