--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
         <div class="fixed">
             <a href=""><img style="width: 55px" src="imgs/negocim.png" alt="negocim"></a>
         </div>
-        <div class="">
-            <div class="boxvideo">
-                <video class="video">
-                    mcvopdmvdivmdfivmdfivm
+        <div class="boxvideo">
+            <div class="video">
+                <video class="rounded" controls width="700px" muted autoplay>
+                    <source src="imgs/TV ESTUDANTE IFMT - CHAMADA VIDEO.mp4">
+                    <source src="imgs/TV ESTUDANTE IFMT - CHAMADA VIDEO.mkv">
+                    <source src="imgs/TV ESTUDANTE IFMT - CHAMADA VIDEO.mov">
                 </video>
             </div>
         </div>
