--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
         </div>
         <div class="boxvideo">
             <div class="video">
-                <video class="rounded" controls width="700px" muted autoplay>
-                    <source src="imgs/TV ESTUDANTE IFMT - CHAMADA VIDEO.mp4">
-                    <source src="imgs/TV ESTUDANTE IFMT - CHAMADA VIDEO.mkv">
-                    <source src="imgs/TV ESTUDANTE IFMT - CHAMADA VIDEO.mov">
-                </video>
+                <iframe style=" border-radius: 10px 10px 5px 5px;" class="video" width="690" height="350"
+                    src="https://www.youtube.com/embed/QviwmWUEA8I" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
     <div class="containerVerde">
