--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="shortcut icon" href="imgs/LogoPrincipal1.png">
     <style>
         /* Make the image fully responsive */
-
     </style>
 </head>
 
@@ -78,89 +77,99 @@
         <div class="fixed">
             <a href=""><img style="width: 55px" src="imgs/negocim.png" alt="negocim"></a>
         </div>
-        <div class="boxvideo">
-            <div class="video">
+        <div class="">
+            <div class="boxvideo">
+
                 <iframe style=" border-radius: 10px 10px 5px 5px;" class="video" width="690" height="350"
                     src="https://www.youtube.com/embed/QviwmWUEA8I" title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
+
             </div>
         </div>
-    <div class="containerVerde">
-        <p style="font-size: 24px;"><strong>Nossa Missão</strong></p>
-        <p style="font-size: 20px; text-align: justify;">&nbsp TV Estudante é um projeto de extensão do IFMT - Campus Cuiabá que tem o intuito de transformar as formas de ensino tradicional a partir do uso de mídias digitais interativas.</p>       
-<p 1 style="font-size: 20px; text-align: justify;">&nbsp A partir de treinamentos em edição de vídeos, mudamos as dinâmicas em sala de aula com materiais educativos que cativam, educam e inspiram nossos jovens a buscarem sempre a inovação, que é a mais forte ferramenta na construção do conhecimento.
-</p>
-    </div>
-    
-
-    <div class="container">
-        <div>
-           <div class="textnoticias"><strong>NOTÍCIAS</strong></div>
-        </div>
-        <div id="bannerDeNoticias" class="carousel slide" data-ride="carousel">
-            <!--INDICADORES DO BANNER -->
-            <ul class="carousel-indicators">
-                <li data-target="#bannerDeNoticias" data-slide-to="0" class="active"></li>
-                <li data-target="#bannerDeNoticias" data-slide-to="1"></li>
-                <li data-target="#bannerDeNoticias" data-slide-to="2"></li>
-                <li data-target="#bannerDeNoticias" data-slide-to="3"></li>
-            </ul>
-            <!-- FIM DOS INDICADORES DO BANNER -->
-
-
-            <!--SLIDES DO BANNER -->
-            <!--PRIMEIRO SLIDE DO BANNER -->
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="imgs/oficinaparaservidores.jpeg" class="d-block w-100" alt="Oficina de Vídeos Educativos"
-                        title="Primeiro Slide">
-                    <div class="carousel-caption">
-                        <h5>Oficina de Vídeos Educativos para os servidores do IFMT - Campus Cuiabá </h5>
-                    </div>
-                </div>
-                <!--SEGUNDO SLIDE DO BANNER -->
-                <div class="carousel-item">
-                    <img src="imgs/oficinanaescolaestadual.jpeg" class="d-block w-100"
-                        alt="Oficina de Vídeos Educativos" title="Secundo Slide">
-                    <div class="carousel-caption">
-                        <h5>Oficina de Vídeos Educativos na Escola Estadual Prof. José Mendes - Campus Cuiabá </h5>
-                    </div>
-                </div>
-                <!--TERCEIRO SLIDE DO BANNER -->
-                <div class="carousel-item">
-                    <img src="imgs/oficinaparaestudantes.jpeg" class="d-block w-100" alt="Oficina de Vídeos Educativos"
-                        title="Terceiro Slide">
-                    <div class="carousel-caption">
-                        <h5>Oficina de Vídeos Educativos para os estudantes do IFMT - Campus Cuiabá </h5>
-                    </div>
-                </div>
-            </div>
-
-            <!--FIM DOS SLIDES DO BANNER -->
-            <a class="carousel-control-prev" href="#bannerDeNoticias" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#bannerDeNoticias" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
-        </div>
-    </div>
-
-    <!--Programas -->
-    <div class="containerConteudos">
         <div class="containerVerde">
-            <p style="font-size: 24px;"><strong>Conheça nossos Conteúdos</strong></p>
-            <div class="row">
-                <div class="col">
-                    <img src="imgs/holaquetal.png" alt="Hola que Tal" class="figuraPrograma">
+            <p style="font-size: 24px;"><strong>Nossa Missão</strong></p>
+            <p style="font-size: 20px; text-align: justify;">&nbsp TV Estudante é um projeto de extensão do IFMT -
+                Campus Cuiabá que tem o intuito de transformar as formas de ensino tradicional a partir do uso de mídias
+                digitais interativas.</p>
+            <p 1 style="font-size: 20px; text-align: justify;">&nbsp A partir de treinamentos em edição de vídeos,
+                mudamos as dinâmicas em sala de aula com materiais educativos que cativam, educam e inspiram nossos
+                jovens a buscarem sempre a inovação, que é a mais forte ferramenta na construção do conhecimento.
+            </p>
+        </div>
+
+
+        <div class="container">
+            <div>
+                <div class="textnoticias"><strong>NOTÍCIAS</strong></div>
+            </div>
+            <div id="bannerDeNoticias" class="carousel slide" data-ride="carousel">
+                <!--INDICADORES DO BANNER -->
+                <ul class="carousel-indicators">
+                    <li data-target="#bannerDeNoticias" data-slide-to="0" class="active"></li>
+                    <li data-target="#bannerDeNoticias" data-slide-to="1"></li>
+                    <li data-target="#bannerDeNoticias" data-slide-to="2"></li>
+                    <li data-target="#bannerDeNoticias" data-slide-to="3"></li>
+                </ul>
+                <!-- FIM DOS INDICADORES DO BANNER -->
+
+
+                <!--SLIDES DO BANNER -->
+                <!--PRIMEIRO SLIDE DO BANNER -->
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="imgs/oficinaparaservidores.jpeg" class="d-block w-100"
+                            alt="Oficina de Vídeos Educativos" title="Primeiro Slide">
+                        <div class="carousel-caption">
+                            <h5>Oficina de Vídeos Educativos para os servidores do IFMT - Campus Cuiabá </h5>
+                        </div>
+                    </div>
+                    <!--SEGUNDO SLIDE DO BANNER -->
+                    <div class="carousel-item">
+                        <img src="imgs/oficinanaescolaestadual.jpeg" class="d-block w-100"
+                            alt="Oficina de Vídeos Educativos" title="Secundo Slide">
+                        <div class="carousel-caption">
+                            <h5>Oficina de Vídeos Educativos na Escola Estadual Prof. José Mendes - Campus Cuiabá </h5>
+                        </div>
+                    </div>
+                    <!--TERCEIRO SLIDE DO BANNER -->
+                    <div class="carousel-item">
+                        <img src="imgs/oficinaparaestudantes.jpeg" class="d-block w-100"
+                            alt="Oficina de Vídeos Educativos" title="Terceiro Slide">
+                        <div class="carousel-caption">
+                            <h5>Oficina de Vídeos Educativos para os estudantes do IFMT - Campus Cuiabá </h5>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
-                    <img src="imgs/podcast.png" alt="Podcast" class="figuraPrograma">
+
+                <!--FIM DOS SLIDES DO BANNER -->
+                <a class="carousel-control-prev" href="#bannerDeNoticias" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#bannerDeNoticias" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>
+            </div>
+        </div>
+
+        <!--Programas -->
+        <div class="containerConteudos">
+            <div class="containerVerde">
+                <p style="font-size: 24px;"><strong>Conheça nossos Conteúdos</strong></p>
+                <div class="row">
+                    <div class="col">
+                        <a href="">
+                            <img src="imgs/holaquetal.png" alt="Hola que Tal" class="figuraPrograma">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="">
+                            <img src="imgs/podcast.png" alt="Podcast" class="figuraPrograma">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </body>
 
