--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <div class="boxMenu position-fixed container-fluid">
+    
         <div class="Menu">
-            <div class="menuSuperior">
+            <div class="menuSuperior container-fluid">
                 <a href="index.html">
                     <img class="LogoPrincipal" src="imgs/LogoPrincipal.png">
                 </a>
@@ -50,7 +50,7 @@
 
             </div>
         </div>
-        <div class="menuInferior">
+        <div class="menuInferior sticky-top">
             <a href="index.html">
                 <img class="logoAlternativo" src="imgs/LogoAlternativo.png">
             </a>
